--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,7 @@ body {
   padding: 24px 60px 60px 60px;
   background-color: white;
   border-radius: 16px;
+  margin-right: 15px;
 }
 
 #form {
@@ -119,4 +120,101 @@ input::placeholder {
 
 #submit:hover {
   opacity: 1;
+}
+
+.chanks {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 0px;
+}
+
+.chank {
+  padding: 24px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.48), 0px 4px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 16px;
+  max-width: 440px;
+  width: 100%;
+}
+
+.chank img {
+  width: 392px;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 12px;
+
+}
+
+.chank-title {
+  font-weight: 700;
+  font-size: 44px;
+  line-height: 44px;
+  color: #000000;
+  margin: 24px 0;
+}
+
+.chank-summary {
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding: 24px 0;
+
+}
+
+.summary-title {
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 24px;
+  letter-spacing: -0.04em;
+  color: #000000;
+  margin-bottom: 10px;
+}
+
+.summary-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  letter-spacing: -0.02em;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.chank-references {}
+
+.references-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  color: #000000;
+  margin: 24px 0 8px 0;
+}
+
+.references-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.references-item {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.02em;
+  color: rgba(0, 0, 0, 0.8);
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  padding: 4px 8px 4px 4px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), #FFFFFF;
+  border-radius: 8px;
+  padding: 4px 8px;
+}
+
+.references-item a {
+  text-decoration: none;
+  color: #F1385D;
 }
