--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
 @import './_header.css';
+@import './_search.css';
+@import './_sorting.css';
+@import './_searchAndSort.css';
 
 * {
   margin: 0;
@@ -10,6 +13,10 @@
 /* var переменные */
 :root {
   --main-color: #F1385D;
+  --black-color: #222222;
+  --secondary-color: #717171;
+  --white-color: #FFFFFF;
+  --btn-main-bg: #000000;
 }
 
 .container {
@@ -18,216 +25,25 @@
   margin: 0 auto;
 }
 
-/* body {
-  background-color: #000000;
-}
-
-.wrapper {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 50px;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-}
-
-.form {
-  max-width: 417px;
-  width: 100%;
-  padding: 24px 60px 60px 60px;
-  background-color: white;
-  border-radius: 16px;
-  margin-right: 15px;
-}
-
-#form {
-  display: flex;
-  flex-direction: column;
-
-}
-
-#form h3 {
-  text-align: center;
+.btn {
+  font-family: 'Inter';
+  font-style: normal;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 44px;
-  align-items: center;
-  letter-spacing: -0.05em;
-  color: #000000;
-}
-
-#form label {
-  font-weight: 700;
-  font-size: 19px;
-  line-height: 24px;
-  letter-spacing: -0.04em;
-  color: #000000;
-  margin-bottom: 10px;
-}
-
-#form input {
-  margin-bottom: 27px;
-  height: 40px;
-  padding: 10px;
-  border: 1px solid #A6BCDA;
-  border-radius: 4px;
   font-size: 14px;
-  font-weight: 400;
-  outline: none;
-}
-
-#form input:focus {
-  border-color: #F1385D;
-}
-
-#form textarea {
-  padding: 10px;
-  border: 1px solid #A6BCDA;
-  border-radius: 4px;
-  font-size: 14px;
-  font-weight: 400;
-  outline: none;
-  width: 296px !important;
-  height: 100px !important;
-}
-
-#form textarea:focus {
-  border-color: #F1385D;
-}
-
-#form textarea::placeholder {
-  color: #A6BCDA;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-input::placeholder {
-  color: #A6BCDA;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-#submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 21px;
-  gap: 10px;
-  background: #F1385D;
-  border-radius: 4px;
-  outline: 0;
-  border: 0;
-  color: #FFFFFF;
-  font-weight: 600;
-  font-size: 16px;
   line-height: 20px;
-  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: -0.02em;
   cursor: pointer;
-  transition: all .7s ease-in;
-  opacity: .8;
-}
-
-#submit:hover {
-  opacity: 1;
-}
-
-.chanks {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 10px;
-  grid-row-gap: 0px;
-}
-
-.chank {
-  padding: 24px;
-  background: #FFFFFF;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.48), 0px 4px 10px rgba(0, 0, 0, 0.16);
-  border-radius: 16px;
-  max-width: 440px;
-  width: 100%;
-}
-
-.chank img {
-  width: 392px;
-  height: 220px;
-  object-fit: cover;
-  border-radius: 12px;
-
-}
-
-.chank-title {
-  font-weight: 700;
-  font-size: 44px;
-  line-height: 44px;
-  color: #000000;
-  margin: 24px 0;
-}
-
-.chank-summary {
-  border-top: 1px solid rgba(0, 0, 0, 0.25);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-  padding: 24px 0;
-
-}
-
-.summary-title {
-  font-weight: 700;
-  font-size: 19px;
-  line-height: 24px;
-  letter-spacing: -0.04em;
-  color: #000000;
-  margin-bottom: 10px;
-}
-
-.summary-description {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: -0.02em;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.chank-references {}
-
-.references-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: -0.02em;
-  color: #000000;
-  margin: 24px 0 8px 0;
-}
-
-.references-list {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-}
-
-.references-item {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 20px;
-  display: flex;
-  align-items: center;
-  letter-spacing: -0.02em;
-  color: rgba(0, 0, 0, 0.8);
-  flex: none;
-  order: 1;
-  flex-grow: 0;
-  padding: 4px 8px 4px 4px;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), #FFFFFF;
-  border-radius: 8px;
   padding: 4px 8px;
+  color: var(--white-color);
+  background-color: var(--btn-main-bg);
+  border-radius: 8px;
+  border: none;
+  outline: none;
 }
 
-.references-item a {
-  text-decoration: none;
-  color: #F1385D;
-} */
+.active-btn {
+  background-color: var(--main-color);
+}
